--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 </head>
 <body>
   <!-- Include the tag for introductory content -->
-
-    <!-- Display stuff you should know logo nested in an anchor tag to link to index.html -->
+  <header role="banner">
+    <!-- Display stuff you should know logo nested in an anchor tag to link to index.html --> 
+    <img src="/image/sysk-logo.webp" alt="Stuff You Should Know"/>
   
     <!-- Write the markup for a navigation and link items to appropriate pages -->
     About
     Episodes
-
+  </header>
 
 
   <!-- Add an element that represents the main content of the page --> 
