--- a/episodes/episodes.html
+++ b/episodes/episodes.html
@@ -10,7 +10,9 @@
   <!-- Include the tag for introductory content -->
 
     <!-- Display sysk logo nested in an anchor tag to link to index.html -->
-  
+    <a href="index.html">
+      <img src="images/sysk-logo.webp" alt="Stuff You Should Know logo">
+    </a>
     <!-- Write the markup for a navigation and link items to appropriate pages -->
     About
     Episodes
