--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav role="navigation" id="nav"
       <ul>
         <li><a href="about.html">About</a></li>
-        <li><a href="Episodes">Episodes</a></li>
+        <li><a href="episodes">Episodes</a></li>
       </ul>
     </nav> 
   </header>
