--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Stuff You Should Know</title>
 </head>
 <body>
   <!-- Include the tag for introductory content -->
@@ -17,10 +17,9 @@
     <nav role="navigation" id="nav">
       <ul>
         <li><a href="about.html">About</a></li>
-        <li><a href="Episodes">Episodes</a></li>
+        <li><a href="episodes/episodes.html">Episodes</a></li>
       </ul>
     </nav> 
-    
 
   </header>
 
