--- a/episodes/episodes.html
+++ b/episodes/episodes.html
@@ -4,22 +4,22 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Stuff You Should Know</title>
 </head>
 
 <body>
   <!-- Include the tag for introductory content -->
   <header role="banner">
     <!-- Display sysk logo nested in an anchor tag to link to index.html -->
-    <a href="index.html">
-      <img src="images/sysk-logo.webp" alt="Stuff You Should Know logo">
+    <a href="../index.html">
+      <img src="../images/sysk-logo.webp" alt="Stuff You Should Know logo">
     </a>
   
     <!-- Write the markup for a navigation and link items to appropriate pages -->
     <nav role="navigation" id="nav">
       <ul>
         <li><a href="about.html">About</a></li>
-        <li><a href="episodes.html">Episodes</a></li>
+        <li><a href="episodes/episodes.html">Episodes</a></li>
       </ul>
     </nav>
   </header>
