--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Stuff You Should Know</title>
 </head>
 <body>
   <!-- Include the tag for introductory content -->
@@ -15,10 +15,10 @@
       <img src="images/sysk-logo.webp" alt="Stuff You Should Know logo">
     </a>
     <!-- Write the markup for a navigation and link items to appropriate pages -->
-    <nav role="navigation" id="nav"
+    <nav role="navigation" id="nav">
       <ul>
         <li><a href="about.html">About</a></li>
-        <li><a href="/episodes/">Episodes</a></li>
+        <li><a href="episodes/episodes.html">Episodes</a></li>
       </ul>
     </nav> 
   </header>
@@ -66,7 +66,7 @@
         <p>We don’t think about the words and phrases we use all the time - until Josh and Chuck look into them and tell everyone what they found. That’s the gist of this episode!</p>
 
         <!-- Link to existing html page within episodes directory; relevant to topic -->
-        <a href="everyday-phrases.html">Learn more</a>
+        <a href="episodes/everyday-phrases.html">Learn more</a>
   
       </article>
      
@@ -82,7 +82,7 @@
         <P>There have been a lot of fake towns built throughout history for a lot of different reasons, like this idyllic suburb Boeing built in the 40s to hide production of their B-17 Bombers! Learn all about these bogus burbs.</P>
         
         <!-- Link to existing html page within episodes directory; relevant to topic -->
-        <a href="fake-town.html">Learn more</a>
+        <a href="episodes/fake-towns.html">Learn more</a>
 
       </article>
 
@@ -98,7 +98,7 @@
         <p>Seeing your near twin is probably pretty weird. But could there be a genetic commonality as well? You bet there could!</p>
 
         <!-- Link to existing html page within episodes directory; relevant to topic -->
-        <a href="doppelgangers.html">Learn more</a>
+        <a href="episodes/doppelgangers.html">Learn more</a>
       </article>
 
     </section>
